# skitter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.sh  system_prompt.md
.github/workflows/: docs.yml
admin-web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
admin-web/src/: App.tsx  index.css  main.tsx
admin-web/src/components/: CostChart.tsx  MetricCard.tsx  SectionHeader.tsx  Sidebar.tsx  StatusPill.tsx  Topbar.tsx  navigation.ts
admin-web/src/lib/: api.ts  mock.ts  theme.ts  types.ts  utils.ts
docs/: contributing.md  index.md  roadmap.md
docs/api/: commands.md  executors.md  overview.md  profiles-and-transport-accounts.md  sessions-and-messages.md  tools-and-runs.md
docs/architecture/: data-model.md  execution-flow.md  system-overview.md
docs/components/: admin-web.md  api-server.md  discord-transport.md  executor-node.md  menubar-client.md  sandbox-runner.md  tui-client.md
docs/core-concepts/: jobs-and-sub-agents.md  memory.md  models-and-reasoning.md  plugins-and-hooks.md  profiles-and-transports.md  scheduler-and-heartbeats.md  secrets.md  sessions.md  skills.md  tools-and-approvals.md
docs/getting-started/: auth-and-pairing.md  configuration.md  docker-compose.md  local-development.md  manual-setup.md  overview.md  quickstart.md
docs/operations/: backup-and-restore.md  deployment.md  observability.md  security.md  testing.md  troubleshooting.md
docs/patterns/: coding-agent.md  conversation-mode.md  event-inbox-heartbeats.md  overview.md
plugins/: README.md
plugins/example_plugin/: README.md  example_plugin.py  plugin.yaml
searxng/: docker-compose.yml  settings.yml
skills/example-skill/: SKILL.md
skitter/: server.py
skitter-ios/: .gitignore  TASK.md
skitter-ios/Skitter/: AppDelegate.swift  SkitterApp.swift
skitter-ios/Skitter.xcodeproj/: project.pbxproj
skitter-ios/Skitter/Core/: APIClient.swift  AppModel.swift  Models.swift  NotificationManager.swift  SettingsStore.swift  SpeechCaptureController.swift  VoicePlaybackController.swift
skitter-ios/Skitter/Views/: MainShellView.swift  RootView.swift
skitter-ios/SkitterTests/: SkitterCoreTests.swift
skitter-menubar/: Package.swift  README.md  install-menubar.sh
skitter-menubar/Sources/SkitterMenuBar/: APIClient.swift  AboutView.swift  AppState.swift  BackdropBlurView.swift  ChatView.swift  ChatWindowController.swift  CommandInputTextView.swift  ConversationView.swift  Models.swift  (+10 more)
skitter-menubar/scripts/: generate_app_icon.swift
skitter-tui/: README.md  pyproject.toml
skitter-tui/skitter_tui/: __init__.py  __main__.py  app.py  client.py  onboarding.py
skitter/api/: app.py  authz.py  schemas.py  security.py
skitter/core/: command_service.py  config.py  config_schema.py  conversation_scope.py  discord_mentions.py  embeddings.py  events.py  graph.py  heartbeat.py  jobs.py  llm.py  mcp.py  memory_hub.py  memory_provider.py  memory_service.py  models.py  profile_context.py  profile_service.py  profiles.py  prompting.py  runtime.py  scheduler.py  secrets.py  session_finalizer.py  session_memory.py  session_run_queue.py  sessions.py  transport_accounts.py  usage.py  web_search.py  workspace.py
skitter/data/: db.py  models.py  repositories.py  schema.sql
skitter/node/: __main__.py
skitter/sandbox/: Dockerfile  runner.py
skitter/tests/: __init__.py  test_discord_transport.py  test_events.py  test_runtime_media_directive.py  test_skills.py
skitter/tools/: __init__.py  approval_service.py  approvals.py  executors.py  middleware.py  registry.py  sandbox_manager.py  user_prompt_service.py
skitter/transports/: __init__.py  base.py  cli.py  discord.py  manager.py
skittermander/: __init__.py  server.py
skittermander-menubar/: .gitignore  Package.swift  README.md  install-menubar.sh
skittermander-tui/: README.md  pyproject.toml
skittermander-tui/skitter_tui/: __init__.py  __main__.py  app.py  client.py
skittermander/api/: app.py  deps.py  schemas.py
skittermander/core/: config.py  config_schema.py  conversation_scope.py  embeddings.py  graph.py  heartbeat.py  jobs.py  llm.py  llm_debug.py  memory.py  memory_service.py  models.py  prompting.py  run_limits.py  runtime.py  scheduler.py  sessions.py  subagents.py  workspace.py
skittermander/data/: __init__.py  init_db.py  models.py  repositories.py  schema.sql
skittermander/node/: __main__.py
skittermander/observability/: logging.py
skittermander/sandbox/: Dockerfile  runner.py
skittermander/tests/: test_discord_transport.py  test_events.py  test_runtime_media_directive.py  test_skills.py
skittermander/tools/: approval_service.py  executors.py  registry.py  sandbox_client.py  sandbox_manager.py
skittermander/transports/: discord.py
workspace-skeleton/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  TOOLS.md
(+153 files in other folders)
