[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skittermander"
version = "0.1.0"
description = "Skittermander AI assistant backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Skittermander" }
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "greenlet>=3.0",
  "asyncpg>=0.29",
  "httpx>=0.27",
  "discord.py>=2.4",
  "langchain>=0.2",
  "langchain-openai>=0.1",
  "langgraph>=0.2",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "markdownify>=0.11",
  "readability-lxml>=0.8.1",
  "apscheduler>=3.10",
  "docker>=7.0",
  "pyyaml>=6.0",
  "cryptography>=42.0",
  "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["skittermander*"]
