[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skitter"
version = "0.1.0"
description = "Skitter AI assistant backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Skitter" }
]

dependencies = [
  "fastapi>=0.135.3",
  "uvicorn>=0.44.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "sqlalchemy>=2.0.49",
  "greenlet>=3.4.0",
  "asyncpg>=0.31.0",
  "httpx>=0.28.1",
  "discord.py>=2.7.1",
  "langchain>=1.2.15",
  "langchain-openai>=1.1.12",
  "langchain-anthropic>=1.4.0",
  "langgraph>=1.1.6",
  "python-dotenv>=1.2.2",
  "beautifulsoup4>=4.14.3",
  "markdownify>=1.2.2",
  "readability-lxml>=0.8.4.1",
  "apscheduler>=3.11.2",
  "docker>=7.1.0",
  "pyyaml>=6.0.3",
  "cryptography>=46.0.7",
  "pgvector>=0.4.2",
  "websockets>=16.0",
  "Pillow>=12.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = [
  "ignore:Core Pydantic V1 functionality isn't compatible with Python 3\\.14 or greater\\.:UserWarning:langchain_core\\._api\\.deprecation",
]

[project.scripts]
skitter-node = "skitter.node.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skitter*"]
