[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skitter-tui"
version = "0.1.0"
description = "Standalone TUI client for Skitter API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "textual>=0.70.0",
]

[project.scripts]
skitter-tui = "skitter_tui.__main__:main"

[tool.setuptools]
packages = ["skitter_tui"]
